# sticky-notes-app

./: .cursorrules  App.tsx  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/: layout.tsx  page.tsx
app/input-window/: page.tsx
app/screenshot/: page.tsx
components/: AboutPage.tsx  App.tsx  CategoryManager.tsx  NoteEditor.tsx  NoteList.tsx  NoteWindow.tsx  ScreenshotSelector.tsx  SettingsPage.tsx  ShortcutSettings.tsx  Sidebar.tsx  note-editor.tsx  note-item.tsx  system-tray.tsx
components/ui/: use-toast.tsx
lib/: api.ts  tauri-api.ts  window.ts
note1/: package.json
note1/src-tauri/: Cargo.toml  tauri.conf.json
note1/src-tauri/src/: main.rs
src/: App.css  App.tsx  index.css  main.tsx  note.html  screenshot.html  settings.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  key_manager.rs  logger.rs  main.rs  reminder.rs  screenshot.rs  settings.rs  shortcut.rs  tray.rs
src/components/: Note.tsx  NoteContextMenu.tsx  NoteEditor.tsx  ReminderModal.tsx  ReminderNotification.tsx
src/lib/: api.ts  logger.ts  tauri-api.ts
src/types/: index.ts  tauri.d.ts
