[package]
name = "sticky-notes-app"
version = "0.1.0"
description = "轻量级便签工具"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["sqlcipher"] }
tauri = { version = "2.0.0-rc.2", features = ["shell-open", "notification", "dialog", "window-create", "window-hide", "window-show", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-set-focus", "window-set-title", "system-tray"] }
thiserror = "1.0"
once_cell = "1.8"
chrono = "0.4"
window-shadows = "0.2"
base64 = "0.13"
dirs = "5.0"
image = "0.24.7"
tauri-plugin-global-shortcut = { version = "2.0.0-rc.2" }
notify-rust = "4.9"
tauri-plugin-tray = { version = "2.0.0-rc.2" }

# Windows Credential Manager
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
